# DSG

./: .cursorignore  .gitignore  CMakeLists.txt  LICENSE  README.md  callgrind.out.query
analysis/: analyze_sensitivity_tradeoff.py  log_record_extractor.py  plot_recall_qps.py
apps/: CMakeLists.txt  build_index.cc  generate_groundtruth.cc  query_index.cc
benchmark/: CMakeLists.txt  benchmark_compactg_arbitrary.cc  benchmark_deep_arbitrary.cc  build_index.cc  compact_stream.cc  digra_stream.cc  incremental_knnfirst.cc  incremental_stream.cc  knnfirst.cc  ordered_serfVsDsg.cc  query_index.cc  scalibility_exp.cc
include/: base_index.h  compact_graph.h  dsg.h  index_base.h  segment_graph_2D_optimized.h  segment_graph_2d.h
include/base_hnsw/: hnswalg.h  hnswlib.h
include/common/: data_wrapper.h  reader.h
include/incremental_hnsw/: hnswalg.h  hnswlib.h
include/utils/: data_wrapper.h  flat_vectors.h  reader.h  utils.h
log/: changeEdgesIntoIndexSize.py
log/incremental_stream/yt8m-video/: 0_24_1200_500.backuplog  0_24_1200_500.withLimitFetchNNlog
script/: exp_tuneM_Z.sh  generate_gt.sh  incremental_stream.sh
scripts/: run_build_index.sh  run_generate_groundtruth.sh  run_query_index.sh  run_test_hnsw_range.sh
src/: compact_graph.h  dsg.cc  index_base.h  segment_graph_2D_optimized.h  segment_graph_2d.h
src/base_hnsw/: hnswalg.h
src/common/: reader.cc
src/utils/: CMakeLists.txt  data_wrapper.cc  reader.cc  utils.cc
test/: test_l2_benchmark.cpp  test_range_benchmark.cpp
tests/: buildindex_wrapper.cpp  data_converter.cpp  fanns_survey_helpers.cpp  fvecs_to_bin.cpp  fvecs_to_sorted_bin.cpp  index_construction.cpp  query_execution.cpp  search_wrapper.cpp  test_hnsw_range.cpp  test_range_benchmark.cpp  test_range_benchmark_simd.cpp
